--- a/css/contact.css
+++ b/css/contact.css
@@ -5,17 +5,17 @@
   margin: auto;
   background-color: rgb(5, 5, 5);
   border-radius: 15px;
-  box-shadow: 5px 5px 5px black;
+  box-shadow: 5px 5px 5px black, -1px -1px 3px aqua;
   padding-top: 1rem;
   margin-bottom: 2rem;
 }
 
-.contact h1 {
+.contact h2 {
   margin-left: 2rem;
   margin-bottom: 4rem;
 }
 
-.contact h1 span {
+.contact h2 span {
   color: aqua;
   font-style: italic;
 }
@@ -27,10 +27,11 @@
   text-align: center;
   align-items: center;
   margin: auto;
-  border-radius: 8% 8% 0% 0%;
+  border-radius: 15px;
   box-shadow: -1px -1px 2px aqua;
   width: 100vh;
   height: 60vh;
+  margin-top: 6vh;
 }
 
 .contact .row .map {
