--- a/css/project.css
+++ b/css/project.css
@@ -1,7 +1,7 @@
 .project-box {
   display: flexbox;
   width: 98%;
-  height: 180vh;
+  height: auto;
   margin: auto;
   background-color: rgb(5, 5, 5);
   border-radius: 15px;
@@ -41,10 +41,10 @@
 }
 
 .project-table table {
-  margin-top: 14%;
+  margin-top: 10%;
   margin-left: 5%;
   width: 70vh;
-  height: 40vh;
+  height: 45vh;
   padding: 5px;
   padding-left: 8px;
   border-left: 1px solid aqua;
@@ -52,7 +52,7 @@
 
 .project-table table tr {
   margin-bottom: 2rem;
-  width: 70vh;
+  width: 80vh;
 }
 
 .project-table table tr td h4 {
