--- a/css/responsiveBP.css
+++ b/css/responsiveBP.css
@@ -9,6 +9,32 @@
   .project-box {
     height: 340vh;
   }
+
+  .project-box .project-box-card .card-project {
+    display: flex;
+    flex-wrap: wrap;
+    margin: auto;
+    margin-top: 5vh;
+  }
+
+  .project-box .project-box-card .project-table {
+    margin-top: 5%;
+    margin: auto;
+  }
+
+  .project-box .project-box-card .project-table table {
+    margin: auto;
+    margin-top: 3vh;
+    border-left: none;
+  }
+
+  .project-table table tr {
+    width: 70vh;
+  }
+
+  .project-box {
+    height: auto;
+  }
 }
 
 @media screen and (max-width: 1000px) {
@@ -32,6 +58,8 @@
     margin-left: 0;
   }
 
+  /* Profil */
+
   .profile .profile-img .flower-bg::after,
   .dark .profile .profile-img .flower-bg::after {
     top: 8%;
@@ -40,26 +68,6 @@
   .profile .profile-img .flower-bg::before,
   .dark .profile .profile-img .flower-bg::before {
     top: 68%;
-  }
-
-  .project-box .project-box-card .card-project {
-    margin: auto;
-    margin-top: 5vh;
-  }
-
-  .project-box .project-box-card .project-table {
-    margin-top: 5%;
-    margin: auto;
-  }
-
-  .project-box .project-box-card .project-table table {
-    margin: auto;
-    margin-top: 3vh;
-    border-left: none;
-  }
-
-  .project-box {
-    height: 310vh;
   }
 }
 
@@ -92,6 +100,8 @@
     height: 100vh;
   }
 
+  /* Project */
+
   .project-table table {
     width: 60vh;
   }
@@ -101,7 +111,7 @@
   }
 
   .project-box {
-    height: 300vh;
+    height: auto;
   }
 }
 
@@ -150,5 +160,32 @@
   .profile .profile-img .flower-bg::before,
   .dark .profile .profile-img .flower-bg::before {
     opacity: 0%;
+  }
+
+  /* Project */
+
+  .project-box h2:nth-child(2) {
+    margin-top: 1rem;
+    font-size: 1rem;
+    text-align: center;
+  }
+
+  .project-box .project-box-card .card-project img {
+    margin: auto;
+    width: 90%;
+    height: 40%;
+  }
+
+  .project-table table {
+    width: 90%;
+  }
+
+  .project-table table tr {
+    width: 90%;
+    font-size: 10px;
+  }
+
+  .project-box {
+    height: auto;
   }
 }
