--- a/css/profile.css
+++ b/css/profile.css
@@ -1,70 +1,71 @@
 .profile {
-  display: flex;
-  width: 98%;
-  height: 80vh;
-  justify-content: center;
-  margin: auto;
-  background-color: rgb(0, 0, 0);
-  border-radius: 15px;
-  box-shadow: 5px 5px 5px black, -1px -1px 3px aqua;
-  margin-bottom: 2rem;
+    display: flex;
+    position: relative;
+    width: 98%;
+    height: 80vh;
+    justify-content: center;
+    margin: auto;
+    background-color: rgb(0, 0, 0);
+    border-radius: 15px;
+    box-shadow: 5px 5px 5px black, -1px -1px 3px aqua;
+    margin-bottom: 2rem;
 }
 
 .profile .profile-img {
-  margin-top: 8rem;
-  text-align: center;
-  background-color: black;
-  border-radius: 5% 5% 0% 0%;
-  box-shadow: -1px -1px 1px aqua;
+    margin-top: 8rem;
+    text-align: center;
+    background-color: black;
+    border-radius: 5% 5% 0% 0%;
+    box-shadow: -1px -1px 1px aqua;
 }
 
 .profile .profile-img::after {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 26.5rem;
-  width: 20rem;
-  height: 3rem;
-  bottom: 0;
-  background: linear-gradient(
-    0deg,
-    rgb(0, 0, 0) 8%,
-    rgba(255, 255, 255, 0) 50%
-  );
+    content: "";
+    display: block;
+    position: absolute;
+    top: 28rem;
+    width: 20rem;
+    height: 3rem;
+    bottom: 0;
+    background: linear-gradient(
+        0deg,
+        rgb(0, 0, 0) 8%,
+        rgba(255, 255, 255, 0) 50%
+    );
 }
 
 .profile .profile-img .utama {
-  margin-top: 4rem;
-  width: 18rem;
-  padding: 0.5rem;
-  border-radius: 15%;
-  opacity: 0.8;
-  margin-left: 3rem;
+    margin-top: 4rem;
+    width: 18rem;
+    padding: 0.5rem;
+    border-radius: 15%;
+    opacity: 0.8;
+    margin-left: 3rem;
 }
 
 .profile .profile-img h2 {
-  color: rgb(255, 255, 255);
-  text-shadow: 3px 3px 8px rgb(0, 39, 107);
-  margin-top: 10px;
+    color: rgb(255, 255, 255);
+    text-shadow: 3px 3px 8px rgb(0, 39, 107);
+    margin-top: 10px;
 }
 
 .profile .profile-img h4 span {
-  margin-top: 2px;
-  font-style: italic;
+    margin-top: 2px;
+    font-style: italic;
 }
 
 .profile .profile-img .flower-bg::before {
-  content: url(../img/hero/flower-light-edit-bot.png) "";
-  position: absolute;
-  top: 68.5%;
-  right: 1%;
-  z-index: 2;
+    content: url(../img/hero/flower-light-edit-bot.png) "";
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: 2;
 }
 
 .profile .profile-img .flower-bg::after {
-  content: url(../img/hero/flower-light-edit.png) "";
-  position: absolute;
-  top: 9%;
-  right: 1%;
-  z-index: 2;
+    content: url(../img/hero/flower-light-edit.png) "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 2;
 }
